# pii_redaction

./: .env.example  .gitignore  Dockerfile  PROJECT_PLAN.md  README.md  events.txt  main.py  pyproject.toml  test_nan.py
.github/workflows/: cd.yml  ci.yaml  ci.yml
api/.github/workflows/: cd.yml  ci.yml
api/app/: config.py  dependencies.py  main.py  models.py
api/app/core/: config.py  logging_setup.py
api/app/routers/: demo.py  redact.py  system.py
api/app/static/: styles.css
api/app/templates/: index.html  layout.html
cli/: prepare_ds.py  publish.py  publish_utils.py  redact.py  train.py  train_utils.py
data/: label_info.json
model_cards/: base-bf16-weighted-trainer-readme.md  small-bf16-weighted-trainer-readme.md  xsmall-bf16-weighted-trainer-readme.md
notebooks/: baseline.ipynb  deberta.ipynb  prepare_ds.ipynb  production.ipynb  publish.ipynb  publish_utils.py  sentence_piece.ipynb  sentence_piece_baseline.ipynb  test_models.ipynb  train_custom.ipynb
old_notebooks/: distilbert_ft.ipynb  explore_ds.ipynb  label.ipynb  test_deberta.ipynb
pii_redaction/: models.py  redactor.py
src/: api.py  models.py  prepare_ds.py  publish.py  publish_utils.py  redactor.py  train.py  train_utils.py
src/static/: styles.css
src/templates/: index.html
tests/: conftest.py  test_api.py  test_cli.py  test_config.py  test_demo.py  test_redact.py  test_system.py
view/: app.py
view/static/: app.js  style.css
view/templates/: index.html
