[project]
name = "pii-redaction-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "colorama>=0.4.6",
    "datasets>=4.8.5",
    "evaluate>=0.4.6",
    "fastapi[standard]>=0.136.1",
    "huggingface-hub>=1.14.0",
    "jupyter>=1.1.1",
    "pytest>=9.1.0",
    "sentencepiece>=0.2.1",
    "seqeval>=1.2.2",
    "slowapi>=0.1.9",
    "tiktoken>=0.13.0",
    "torch>=2.11.0",
    "transformers[torch]>=5.8.0",
    "wandb>=0.26.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.pyright]
extraPaths = ["."]

