[project]
name = "pii-redaction-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "colorama>=0.4.6",
    "datasets>=4.8.5",
    "evaluate>=0.4.6",
    "fastapi>=0.136.3",
    "huggingface-hub>=1.17.0",
    "jupyter>=1.1.1",
    "sentencepiece>=0.2.1",
    "seqeval>=1.2.2",
    "slowapi>=0.1.9",
    "tiktoken>=0.13.0",
    "torch>=2.12.0",
    "transformers>=5.9.0",
    "wandb>=0.27.0",
]

[dependency-groups]
# Dev tooling
dev = [
    "pytest>=9.1.0",
    "ruff>=0.15.17",
]

# Only what the API needs at runtime
docker =[
    "fastapi[standard]>=0.136.3",
    "slowapi>=0.1.9",
    "transformers>=5.9.0",
    # add torch cuda in docker
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.pyright]
extraPaths = ["."]
